✨ Interactive treatment comparison tool — core strategic asset

--- a/pages/hikayeler.html
+++ b/pages/hikayeler.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/hub-upgrade.css">
     <style>
         .stats-banner {
             background: var(--bg-white);
@@ -311,7 +312,7 @@
                 <img src="../images/logo.svg" alt="UzunYaşa" class="logo-img">
             </a>
             <nav class="nav">
-                <a href="#" class="nav-link">Keşfet ▾</a>
+                <a href="rehberler.html" class="nav-link">Keşfet ▾</a>
                 <a href="araclar.html" class="nav-link">Araçlar</a>
                 <a href="hikayeler.html" class="nav-link active">Hikayeler</a>
                 <a href="bilim.html" class="nav-link">Bilim</a>
@@ -327,6 +328,11 @@
         </video>
         <div class="page-hero-overlay"></div>
         <div class="page-hero-content">
+            <nav class="hero-breadcrumb">
+                <a href="../index.html">Ana Sayfa</a>
+                <span>›</span>
+                <span class="current">Başarı Hikayeleri</span>
+            </nav>
             <h1>Başarı Hikayeleri</h1>
             <p>İlham verici hikayeler ve dönüşüm yolculukları. <em style="opacity: 0.8; font-size: 0.9em;">(Gizlilik için isimler değiştirilmiştir)</em></p>
         </div>
@@ -391,7 +397,7 @@
 
         <!-- Stories Grid -->
         <div class="stories-grid">
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -422,11 +428,11 @@
                         </div>
                     </div>
                     <p class="story-quote">"İki çocuk doğurduktan sonra kendime bakamaz olmuştum. UzunYaşa ile adım adım ilerledim, şimdi çocuklarımla parkta koşabiliyorum."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
 
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image" style="background: linear-gradient(135deg, #374151 0%, #4b5563 100%);">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -457,11 +463,11 @@
                         </div>
                     </div>
                     <p class="story-quote">"50 yaşından sonra spor yapmak için çok geç sandım. Yanılmışım. Şimdi haftada 3 gün salon, 2 gün yürüyüş yapıyorum."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
 
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image" style="background: linear-gradient(135deg, var(--accent-orange) 0%, var(--accent-orange-light) 100%);">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -492,11 +498,11 @@
                         </div>
                     </div>
                     <p class="story-quote">"Diyabet ilaçlarından kurtulmak imkansız görünüyordu. Beslenme değişikliği ve düzenli hareketle 1 yılda başardım."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
 
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -527,11 +533,11 @@
                         </div>
                     </div>
                     <p class="story-quote">"Kronik yorgunluk ve stresle mücadele ediyordum. Uyku düzenim ve stres yönetimim değişince her şey değişti."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
 
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image" style="background: linear-gradient(135deg, #6B5B95 0%, #8B7BAA 100%);">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -562,11 +568,11 @@
                         </div>
                     </div>
                     <p class="story-quote">"Yıllarca diyet yaptım, hep geri aldım. İlaç tedavisi + davranışsal değişim kombinasyonu benim için çözüm oldu."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
 
-            <div class="story-card">
+            <div class="story-card hub-fade-in">
                 <div class="story-image" style="background: linear-gradient(135deg, #059669 0%, #10B981 100%);">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
@@ -597,7 +603,7 @@
                         </div>
                     </div>
                     <p class="story-quote">"BMI 48'di, hipertansiyon ve uyku apnem vardı. Ameliyattan 2 yıl sonra tüm hastalıklarım geride kaldı."</p>
-                    <a href="#" class="story-link">Devamını oku →</a>
+                    <span class="hub-coming-soon">🔜 Yakında</span>
                 </div>
             </div>
         </div>
@@ -607,10 +613,68 @@
         <h2>Siz de hikayenizi paylaşın</h2>
         <p>Başarınız başkalarına ilham olabilir. Deneyimlerinizi toplulukla paylaşın.</p>
         <div class="cta-buttons">
-            <a href="#" class="btn-white">Hikayemi Paylaş</a>
-            <a href="#" class="btn-outline-white">Teste Başla</a>
+            <a href="hakkimizda.html#iletisim" class="btn-white">Hikayemi Paylaş</a>
+            <a href="test.html" class="btn-outline-white">Teste Başla</a>
         </div>
     </section>
+
+
+    <!-- RELATED CONTENT -->
+    <section class="hub-related">
+        <h2>İlgili İçerikler</h2>
+        <div class="hub-related-grid">
+            <a href="tedavi.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Tedavi Seçenekleri</h4>
+                    <p>Yöntemleri keşfedin</p>
+                </div>
+            </a>
+            <a href="rehberler.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Rehberler</h4>
+                    <p>Adım adım kılavuzlar</p>
+                </div>
+            </a>
+            <a href="beslenme.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Beslenme</h4>
+                    <p>Sağlıklı beslenme</p>
+                </div>
+            </a>
+        </div>
+    </section>
+    <!-- NEWSLETTER -->
+    <section class="hub-newsletter">
+        <h2>📬 Haftalık Sağlık Bülteni</h2>
+        <p>Bilimsel araştırmalara dayalı sağlık önerileri, yeni içerikler ve ipuçları için abone olun.</p>
+        <form class="hub-newsletter-form" onsubmit="handleHubNewsletter(event, this)">
+            <input type="email" name="email" placeholder="E-posta adresiniz" required>
+            <button type="submit">Abone Ol</button>
+        </form>
+        <p class="hub-newsletter-success" id="hub-nl-success">✅ Teşekkürler! Bültenimize kaydoldunuz.</p>
+    </section>
+    <!-- SOCIAL SHARING -->
+    <div class="hub-social-share">
+        <span>Paylaş:</span>
+        <a href="javascript:void(0)" onclick="window.open('https://twitter.com/intent/tweet?url='+encodeURIComponent(location.href)+'&text='+encodeURIComponent(document.title),'_blank')" class="hub-share-btn twitter" aria-label="Twitter'da Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),'_blank')" class="hub-share-btn facebook" aria-label="Facebook'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://api.whatsapp.com/send?text='+encodeURIComponent(document.title+' '+location.href),'_blank')" class="hub-share-btn whatsapp" aria-label="WhatsApp'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+        </a>
+    </div>
 
     <footer class="footer">
         <div class="footer-inner">
@@ -656,6 +720,45 @@
                 tab.classList.add('active');
             });
         });
+    </script>
+
+    <!-- HUB UPGRADE JS -->
+    <script>
+    // Staggered fade-in on scroll
+    const hubObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                hubObserver.unobserve(entry.target);
+            }
+        });
+    }, { threshold: 0.1, rootMargin: "0px 0px -50px 0px" });
+    document.querySelectorAll(".hub-fade-in").forEach(el => hubObserver.observe(el));
+
+    // Active sub-nav highlighting on scroll
+    if (document.querySelector(".hub-subnav")) {
+        const sections = document.querySelectorAll("section[id]");
+        window.addEventListener("scroll", () => {
+            let current = "";
+            sections.forEach(section => {
+                const top = section.offsetTop - 200;
+                if (pageYOffset >= top) current = section.getAttribute("id");
+            });
+            document.querySelectorAll(".hub-subnav-link").forEach(link => {
+                link.classList.remove("active");
+                if (link.getAttribute("href") === "#" + current) link.classList.add("active");
+            });
+        });
+    }
+
+    // Newsletter handler
+    function handleHubNewsletter(e, form) {
+        e.preventDefault();
+        const email = form.email.value;
+        localStorage.setItem("uzunyasa_subscriber", email);
+        form.style.display = "none";
+        document.getElementById("hub-nl-success").style.display = "block";
+    }
     </script>
 </body>
 </html>
