--- a/pages/rehberler.html
+++ b/pages/rehberler.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/hub-upgrade.css">
     <style>
         .featured-guide {
             display: grid;
@@ -311,7 +312,7 @@
                 <img src="../images/logo.svg" alt="UzunYaşa" class="logo-img">
             </a>
             <nav class="nav">
-                <a href="#" class="nav-link">Keşfet ▾</a>
+                <a href="rehberler.html" class="nav-link">Keşfet ▾</a>
                 <a href="araclar.html" class="nav-link">Araçlar</a>
                 <a href="hikayeler.html" class="nav-link">Hikayeler</a>
                 <a href="bilim.html" class="nav-link">Bilim</a>
@@ -327,6 +328,11 @@
         </video>
         <div class="page-hero-overlay"></div>
         <div class="page-hero-content">
+            <nav class="hero-breadcrumb">
+                <a href="../index.html">Ana Sayfa</a>
+                <span>›</span>
+                <span class="current">Rehberler</span>
+            </nav>
             <h1>Sağlık Rehberleri</h1>
             <p>Adım adım, anlaşılır ve uygulanabilir rehberlerle sağlıklı yaşama geçiş yapın.</p>
         </div>
@@ -378,7 +384,7 @@
 
         <!-- Guides Grid -->
         <div class="guides-grid">
-            <a href="rehberler/kalori-acigi.html" class="guide-card">
+            <a href="rehberler/kalori-acigi.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&q=80');">
                     <span class="guide-category-badge">Kilo Yönetimi</span>
                     <h3>Kalori Açığı Oluşturma Rehberi</h3>
@@ -395,7 +401,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/akdeniz-diyeti.html" class="guide-card">
+            <a href="rehberler/akdeniz-diyeti.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1498837167922-ddd27525d352?w=600&q=80');">
                     <span class="guide-category-badge">Beslenme</span>
                     <h3>Akdeniz Diyeti Başlangıç Rehberi</h3>
@@ -412,7 +418,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/evde-egzersiz.html" class="guide-card">
+            <a href="rehberler/evde-egzersiz.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=600&q=80');">
                     <span class="guide-category-badge">Egzersiz</span>
                     <h3>Evde Egzersiz Başlangıç Rehberi</h3>
@@ -429,7 +435,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/tip2-diyabet.html" class="guide-card">
+            <a href="rehberler/tip2-diyabet.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=600&q=80');">
                     <span class="guide-category-badge">Kronik Hastalıklar</span>
                     <h3>Tip 2 Diyabet Önleme Rehberi</h3>
@@ -446,7 +452,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/uyku-kalitesi.html" class="guide-card">
+            <a href="rehberler/uyku-kalitesi.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&q=80');">
                     <span class="guide-category-badge">Zihinsel Sağlık</span>
                     <h3>Uyku Kalitesini Artırma Rehberi</h3>
@@ -463,7 +469,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/aralikli-oruc.html" class="guide-card">
+            <a href="rehberler/aralikli-oruc.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=600&q=80');">
                     <span class="guide-category-badge">Beslenme</span>
                     <h3>Aralıklı Oruç Başlangıç Rehberi</h3>
@@ -480,7 +486,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/plato-kirma.html" class="guide-card">
+            <a href="rehberler/plato-kirma.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1538805060514-97d9cc17730c?w=600&q=80');">
                     <span class="guide-category-badge">Kilo Yönetimi</span>
                     <h3>Plato Kırma Rehberi</h3>
@@ -497,7 +503,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/kalp-sagligi.html" class="guide-card">
+            <a href="rehberler/kalp-sagligi.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1505576399279-565b52d4ac71?w=600&q=80');">
                     <span class="guide-category-badge">Kronik Hastalıklar</span>
                     <h3>Kalp Sağlığı Koruma Rehberi</h3>
@@ -514,7 +520,7 @@
                 </div>
             </a>
 
-            <a href="rehberler/50-yas-egzersiz.html" class="guide-card">
+            <a href="rehberler/50-yas-egzersiz.html" class="guide-card hub-fade-in">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=600&q=80');">
                     <span class="guide-category-badge">Egzersiz</span>
                     <h3>50 Yaş Üstü Egzersiz Rehberi</h3>
@@ -563,6 +569,64 @@
         <a href="test.html" class="btn-white">Teste Başla →</a>
     </section>
 
+
+    <!-- RELATED CONTENT -->
+    <section class="hub-related">
+        <h2>İlgili İçerikler</h2>
+        <div class="hub-related-grid">
+            <a href="blog.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Blog</h4>
+                    <p>Güncel yazılar</p>
+                </div>
+            </a>
+            <a href="araclar.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Araçlar</h4>
+                    <p>Hesaplayıcılar</p>
+                </div>
+            </a>
+            <a href="hikayeler.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Hikayeler</h4>
+                    <p>Başarı hikayeleri</p>
+                </div>
+            </a>
+        </div>
+    </section>
+    <!-- NEWSLETTER -->
+    <section class="hub-newsletter">
+        <h2>📬 Haftalık Sağlık Bülteni</h2>
+        <p>Bilimsel araştırmalara dayalı sağlık önerileri, yeni içerikler ve ipuçları için abone olun.</p>
+        <form class="hub-newsletter-form" onsubmit="handleHubNewsletter(event, this)">
+            <input type="email" name="email" placeholder="E-posta adresiniz" required>
+            <button type="submit">Abone Ol</button>
+        </form>
+        <p class="hub-newsletter-success" id="hub-nl-success">✅ Teşekkürler! Bültenimize kaydoldunuz.</p>
+    </section>
+    <!-- SOCIAL SHARING -->
+    <div class="hub-social-share">
+        <span>Paylaş:</span>
+        <a href="javascript:void(0)" onclick="window.open('https://twitter.com/intent/tweet?url='+encodeURIComponent(location.href)+'&text='+encodeURIComponent(document.title),'_blank')" class="hub-share-btn twitter" aria-label="Twitter'da Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),'_blank')" class="hub-share-btn facebook" aria-label="Facebook'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://api.whatsapp.com/send?text='+encodeURIComponent(document.title+' '+location.href),'_blank')" class="hub-share-btn whatsapp" aria-label="WhatsApp'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+        </a>
+    </div>
+
     <footer class="footer">
         <div class="footer-inner">
             <div class="footer-grid">
@@ -606,6 +670,45 @@
                 tab.classList.add('active');
             });
         });
+    </script>
+
+    <!-- HUB UPGRADE JS -->
+    <script>
+    // Staggered fade-in on scroll
+    const hubObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                hubObserver.unobserve(entry.target);
+            }
+        });
+    }, { threshold: 0.1, rootMargin: "0px 0px -50px 0px" });
+    document.querySelectorAll(".hub-fade-in").forEach(el => hubObserver.observe(el));
+
+    // Active sub-nav highlighting on scroll
+    if (document.querySelector(".hub-subnav")) {
+        const sections = document.querySelectorAll("section[id]");
+        window.addEventListener("scroll", () => {
+            let current = "";
+            sections.forEach(section => {
+                const top = section.offsetTop - 200;
+                if (pageYOffset >= top) current = section.getAttribute("id");
+            });
+            document.querySelectorAll(".hub-subnav-link").forEach(link => {
+                link.classList.remove("active");
+                if (link.getAttribute("href") === "#" + current) link.classList.add("active");
+            });
+        });
+    }
+
+    // Newsletter handler
+    function handleHubNewsletter(e, form) {
+        e.preventDefault();
+        const email = form.email.value;
+        localStorage.setItem("uzunyasa_subscriber", email);
+        form.style.display = "none";
+        document.getElementById("hub-nl-success").style.display = "block";
+    }
     </script>
 </body>
 </html>
