--- a/pages/tedavi.html
+++ b/pages/tedavi.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/hub-upgrade.css">
     <style>
         .warning-banner {
             background: #FEF3C7;
@@ -217,7 +218,7 @@
                 <img src="../images/logo.svg" alt="UzunYaşa" class="logo-img">
             </a>
             <nav class="nav">
-                <a href="#" class="nav-link active">Keşfet ▾</a>
+                <a href="rehberler.html" class="nav-link active">Keşfet ▾</a>
                 <a href="araclar.html" class="nav-link">Araçlar</a>
                 <a href="hikayeler.html" class="nav-link">Hikayeler</a>
                 <a href="bilim.html" class="nav-link">Bilim</a>
@@ -233,6 +234,11 @@
         </video>
         <div class="page-hero-overlay"></div>
         <div class="page-hero-content">
+            <nav class="hero-breadcrumb">
+                <a href="../index.html">Ana Sayfa</a>
+                <span>›</span>
+                <span class="current">Tedavi Seçenekleri</span>
+            </nav>
             <div class="page-hero-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M22 12h-4l-3 9L9 3l-3 9H2"/>
@@ -254,12 +260,26 @@
         </div>
     </div>
 
+    <!-- COMPARISON TOOL CTA -->
+    <section style="max-width:900px; margin:2rem auto; padding:0 2rem;">
+        <a href="tedavi/karsilastirma.html" style="display:block; background:linear-gradient(135deg, #195157, #0D7377); border-radius:16px; padding:2.5rem; color:white; text-decoration:none; transition:all 0.3s; box-shadow:0 8px 30px rgba(13,115,119,0.2);" onmouseover="this.style.transform='translateY(-3px)';this.style.boxShadow='0 12px 40px rgba(13,115,119,0.3)'" onmouseout="this.style.transform='';this.style.boxShadow='0 8px 30px rgba(13,115,119,0.2)'">
+            <div style="display:flex; align-items:center; gap:1.5rem; flex-wrap:wrap;">
+                <div style="font-size:2.5rem;">⚖️</div>
+                <div style="flex:1; min-width:200px;">
+                    <div style="font-size:1.4rem; font-weight:700; margin-bottom:0.5rem;">İnteraktif Tedavi Karşılaştırma Aracı</div>
+                    <div style="opacity:0.9; line-height:1.6;">GLP-1 ilaçları vs ESG vs Bariatrik Cerrahi — kanıta dayalı, tarafsız karşılaştırma. Quiz ile size uygun tedaviyi keşfedin.</div>
+                </div>
+                <div style="font-size:1.5rem; font-weight:700;">→</div>
+            </div>
+        </a>
+    </section>
+
     <section class="content-section">
         <h2 class="section-title">Tedavi Kategorileri</h2>
         <p class="section-subtitle">Farklı tedavi yaklaşımlarını keşfedin ve sizin için uygun seçenekleri belirleyin.</p>
         
         <div class="treatment-grid">
-            <div class="treatment-card">
+            <div class="treatment-card hub-fade-in">
                 <div class="treatment-header">
                     <h3>Yaşam Tarzı Değişikliği</h3>
                     <p>İlk basamak tedavi yaklaşımı</p>
@@ -268,14 +288,14 @@
                     <ul class="treatment-list">
                         <li><a href="beslenme.html">Beslenme Programları <span>→</span></a></li>
                         <li><a href="egzersiz.html">Egzersiz Reçeteleri <span>→</span></a></li>
-                        <li><a href="#">Davranışsal Terapi <span>→</span></a></li>
+                        <li><a href="tedavi/davranissal-terapi.html">Davranışsal Terapi <span>→</span></a></li>
                         <li><a href="uyku-stres.html">Uyku Optimizasyonu <span>→</span></a></li>
                         <li><a href="uyku-stres.html">Stres Yönetimi <span>→</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="treatment-card">
+            <div class="treatment-card hub-fade-in">
                 <div class="treatment-header orange">
                     <h3>İlaç Tedavileri</h3>
                     <p>Onaylı farmakolojik seçenekler</p>
@@ -283,15 +303,15 @@
                 <div class="treatment-body">
                     <ul class="treatment-list">
                         <li><a href="blog/glp1-ilaclari-ve-kilo-verme-bilmeniz-gerekenler.html">GLP-1 Agonistleri <span>→</span></a></li>
-                        <li><a href="#">Orlistat <span>→</span></a></li>
-                        <li><a href="#">Naltrexone/Bupropion <span>→</span></a></li>
-                        <li><a href="#">Kombinasyon Tedavileri <span>→</span></a></li>
-                        <li><a href="#">Yan Etkiler & Riskler <span>→</span></a></li>
+                        <li><a href="tedavi/orlistat.html">Orlistat <span>→</span></a></li>
+                        <li><a href="tedavi/naltrexone-bupropion.html">Naltrexone/Bupropion <span>→</span></a></li>
+                        <li><a href="tedavi/kombinasyon-tedavileri.html">Kombinasyon Tedavileri <span>→</span></a></li>
+                        <li><a href="tedavi/yan-etkiler-riskler.html">Yan Etkiler & Riskler <span>→</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="treatment-card">
+            <div class="treatment-card hub-fade-in">
                 <div class="treatment-header dark">
                     <h3>Cerrahi Seçenekler</h3>
                     <p>Bariatrik ve metabolik cerrahi</p>
@@ -301,8 +321,8 @@
                         <li><a href="tedavi/gastrik-sleeve.html">Gastrik Sleeve <span>→</span></a></li>
                         <li><a href="tedavi/gastrik-bypass.html">Gastrik Bypass <span>→</span></a></li>
                         <li><a href="tedavi/endoskopik-prosedurler.html">Endoskopik Prosedürler <span>→</span></a></li>
-                        <li><a href="#">Ameliyat Öncesi Hazırlık <span>→</span></a></li>
-                        <li><a href="#">Uzun Vadeli Takip <span>→</span></a></li>
+                        <li><a href="tedavi/ameliyat-oncesi-hazirlik.html">Ameliyat Öncesi Hazırlık <span>→</span></a></li>
+                        <li><a href="tedavi/uzun-vadeli-takip.html">Uzun Vadeli Takip <span>→</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -394,6 +414,64 @@
         <a href="test.html" class="btn-white">Değerlendirmeye Başla →</a>
     </section>
 
+
+    <!-- RELATED CONTENT -->
+    <section class="hub-related">
+        <h2>İlgili İçerikler</h2>
+        <div class="hub-related-grid">
+            <a href="beslenme.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Beslenme</h4>
+                    <p>İlk basamak tedavi</p>
+                </div>
+            </a>
+            <a href="egzersiz.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Egzersiz</h4>
+                    <p>Hareket programları</p>
+                </div>
+            </a>
+            <a href="bilim.html" class="hub-related-card">
+                <div class="hub-related-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 18l6-6-6-6"/></svg>
+                </div>
+                <div class="hub-related-text">
+                    <h4>Bilimsel Yaklaşım</h4>
+                    <p>Kanıt seviyeleri</p>
+                </div>
+            </a>
+        </div>
+    </section>
+    <!-- NEWSLETTER -->
+    <section class="hub-newsletter">
+        <h2>📬 Haftalık Sağlık Bülteni</h2>
+        <p>Bilimsel araştırmalara dayalı sağlık önerileri, yeni içerikler ve ipuçları için abone olun.</p>
+        <form class="hub-newsletter-form" onsubmit="handleHubNewsletter(event, this)">
+            <input type="email" name="email" placeholder="E-posta adresiniz" required>
+            <button type="submit">Abone Ol</button>
+        </form>
+        <p class="hub-newsletter-success" id="hub-nl-success">✅ Teşekkürler! Bültenimize kaydoldunuz.</p>
+    </section>
+    <!-- SOCIAL SHARING -->
+    <div class="hub-social-share">
+        <span>Paylaş:</span>
+        <a href="javascript:void(0)" onclick="window.open('https://twitter.com/intent/tweet?url='+encodeURIComponent(location.href)+'&text='+encodeURIComponent(document.title),'_blank')" class="hub-share-btn twitter" aria-label="Twitter'da Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),'_blank')" class="hub-share-btn facebook" aria-label="Facebook'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+        </a>
+        <a href="javascript:void(0)" onclick="window.open('https://api.whatsapp.com/send?text='+encodeURIComponent(document.title+' '+location.href),'_blank')" class="hub-share-btn whatsapp" aria-label="WhatsApp'ta Paylaş">
+            <svg viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+        </a>
+    </div>
+
     <footer class="footer">
         <div class="footer-inner">
             <div class="footer-grid">
@@ -429,5 +507,44 @@
             </div>
         </div>
     </footer>
+
+    <!-- HUB UPGRADE JS -->
+    <script>
+    // Staggered fade-in on scroll
+    const hubObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("visible");
+                hubObserver.unobserve(entry.target);
+            }
+        });
+    }, { threshold: 0.1, rootMargin: "0px 0px -50px 0px" });
+    document.querySelectorAll(".hub-fade-in").forEach(el => hubObserver.observe(el));
+
+    // Active sub-nav highlighting on scroll
+    if (document.querySelector(".hub-subnav")) {
+        const sections = document.querySelectorAll("section[id]");
+        window.addEventListener("scroll", () => {
+            let current = "";
+            sections.forEach(section => {
+                const top = section.offsetTop - 200;
+                if (pageYOffset >= top) current = section.getAttribute("id");
+            });
+            document.querySelectorAll(".hub-subnav-link").forEach(link => {
+                link.classList.remove("active");
+                if (link.getAttribute("href") === "#" + current) link.classList.add("active");
+            });
+        });
+    }
+
+    // Newsletter handler
+    function handleHubNewsletter(e, form) {
+        e.preventDefault();
+        const email = form.email.value;
+        localStorage.setItem("uzunyasa_subscriber", email);
+        form.style.display = "none";
+        document.getElementById("hub-nl-success").style.display = "block";
+    }
+    </script>
 </body>
 </html>
