--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -256,9 +256,15 @@
     <section class="content-section">
         <div class="mission-grid">
             <div class="mission-content">
-                <h2>Misyonumuz: Bilgiyle Güçlendirmek</h2>
+                <p style="color:#E8963E;font-weight:600;font-size:0.85rem;text-transform:uppercase;letter-spacing:1px;margin-bottom:0.5rem;">Misyonumuz</p>
+                <h2>Türkiye'nin Bağımsız, Kanıta Dayalı Kilo Yönetimi Platformu</h2>
                 <p>UzunYaşa, sağlık bilgisinin ticari çıkarlardan bağımsız, bilimsel kanıtlara dayalı ve herkes için anlaşılır olması gerektiğine inanır.</p>
                 <p>Amacımız, insanların kendi sağlıkları hakkında bilinçli kararlar vermelerine yardımcı olmak. Ne satıyoruz, ne de sponsor alıyoruz. Sadece bilim konuşuyoruz.</p>
+                <p style="margin-top:1rem;"><strong>Vizyonumuz:</strong> Türkiye'nin kilo yönetimi ve sağlıklı yaşam konusunda başvurulan ilk ve en güvenilir kaynağı olmak.</p>
+                <div style="display:flex;gap:0.75rem;flex-wrap:wrap;margin-top:1.5rem;">
+                    <a href="editoryal-politika.html" style="display:inline-block;padding:0.6rem 1.25rem;background:#0D7377;color:white;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;">📋 Editoryal Politika</a>
+                    <a href="danisma-kurulu.html" style="display:inline-block;padding:0.6rem 1.25rem;border:2px solid #0D7377;color:#0D7377;border-radius:8px;text-decoration:none;font-size:0.9rem;font-weight:600;">👥 Danışma Kurulu</a>
+                </div>
             </div>
             <div class="mission-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--primary-teal), var(--primary-teal-light)); border-radius: 20px; padding: 3rem;">
                 <img src="../images/icon.png" alt="UzunYaşa" style="max-width: 150px; height: auto;">
@@ -605,8 +611,15 @@
             <div class="timeline-item">
                 <div class="timeline-dot">2025</div>
                 <div class="timeline-content">
-                    <h4>Büyüme</h4>
-                    <p>Araçlarımız, kişiselleştirilmiş öneriler ve topluluk özellikleriyle genişliyoruz.</p>
+                    <h4>Büyüme & Genişleme</h4>
+                    <p>75+ sayfa içerik, 200+ bilimsel kaynak, kişiselleştirilmiş araçlar ve AI asistan ile Türkiye'nin en kapsamlı platformu olduk.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-dot">2026</div>
+                <div class="timeline-content">
+                    <h4>Kurumsal Yapılanma</h4>
+                    <p><a href="danisma-kurulu.html" style="color:#0D7377;">Danışma kurulumuz</a> genişledi, <a href="editoryal-politika.html" style="color:#0D7377;">editoryal politikamız</a> resmileşti. Topluluk özelliklerini hayata geçiriyoruz.</p>
                 </div>
             </div>
         </div>
@@ -740,8 +753,9 @@
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
                     <a href="hakkimizda.html">Ekibimiz</a>
-                    <a href="bilim.html">Bilimsel Yaklaşım</a>
-                    <a href="hakkimizda.html#iletisim">İletişim</a>
+                    <a href="editoryal-politika.html">Editoryal Politika</a>
+                    <a href="danisma-kurulu.html">Danışma Kurulu</a>
+                    <a href="icerik-haritasi.html">İçerik Haritası</a>
                 </div>
             </div>
             <div class="footer-bottom">
